<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/login_background"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/bg_login"
                android:layout_height="match_parent">
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/appSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/multilanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:elevation="@dimen/dimen_12dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_language" />


                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:elevation="@dimen/dimen_12dp"
                    android:tint="@color/White"
                    app:srcCompat="@drawable/settings" />


                <Spinner
                    android:id="@+id/languageSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_language_selector_dropdown"
                    android:layout_toStartOf="@id/img_setting"
                    android:backgroundTint="@color/White"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appSettingsLayout"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/app_name_lowercase"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="100sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalGuideline2"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline1"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/app_blue"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-._"
                    android:drawableStart="@drawable/ic_userprofile"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/app_icon_color"
                    android:hint="@string/edt_username_hint"
                    android:inputType="text"
                    android:padding="@dimen/dimen_12dp"
                    android:textAllCaps="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_username_layout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/app_blue"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/app_icon_color"
                    android:ems="10"
                    android:hint="@string/edt_password_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/offlineModeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password_layout"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_offline_mode"></TextView>

                <CheckBox
                    android:id="@+id/check_offline_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/app_icon_color" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/offlineModeLayout"
                android:layout_marginTop="@dimen/dimen_33dp"
                android:background="@drawable/button_rounded_shap"
                android:text="@string/login_btn_text"
                android:textColor="@color/White"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVersionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:buttonTint="@color/app_icon_color"
                android:gravity="center"
                android:text="@string/check_offline_mode" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
