<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hydra</string>
    <string name="app_title_name">HYDRA</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="edt_hint_ip_address">IP Address</string>
    <string name="appbar_scrolling_view_behavior" tools:keep="@string/appbar_scrolling_view_behavior">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="edt_username_hint">Username</string>
    <string name="edt_password_hint">Password</string>
...
